@@ -106,6 +106,11 @@ __EXPORT bool zShape3DPointIsInside(zShape3D *shape, zVec3D *p, bool rim);
 
 __EXPORT zShape3D *zShape3DToPH(zShape3D *shape);
 
+/*! \brief read a shape from a STL file. */
+__EXPORT zShape3D *zShape3DFReadSTL(FILE *fp, zShape3D *shape);
+/*! \brief read a shape from a PLY file. */
+__EXPORT zShape3D *zShape3DFReadPLY(FILE *fp, zShape3D *shape);
+
 /*! \struct zShape3DArray
  * \brief array class of 3D shapes.
  */
